--- a/public/css/app.css
+++ b/public/css/app.css
@@ -319,13 +319,13 @@ textarea {
 
 input::-moz-placeholder, textarea::-moz-placeholder {
   opacity: 1; /* 1 */
-  color: #9ca3af; /* 2 */
+  color: #666666; /* 2 */
 }
 
 input::placeholder,
 textarea::placeholder {
   opacity: 1; /* 1 */
-  color: #9ca3af; /* 2 */
+  color: #666666; /* 2 */
 }
 
 /*
@@ -562,6 +562,12 @@ video {
 .z-20 {
   z-index: 20;
 }
+.col-span-2 {
+  grid-column: span 2 / span 2;
+}
+.col-span-5 {
+  grid-column: span 5 / span 5;
+}
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -583,6 +589,9 @@ video {
 }
 .ml-1 {
   margin-left: 0.25rem;
+}
+.ml-5 {
+  margin-left: 1.25rem;
 }
 .ml-8 {
   margin-left: 2rem;
@@ -608,6 +617,9 @@ video {
 .inline-flex {
   display: inline-flex;
 }
+.grid {
+  display: grid;
+}
 .hidden {
   display: none;
 }
@@ -622,6 +634,9 @@ video {
 }
 .h-8 {
   height: 2rem;
+}
+.h-\[414px\] {
+  height: 414px;
 }
 .h-\[424px\] {
   height: 424px;
@@ -647,8 +662,8 @@ video {
 .w-2\/12 {
   width: 16.666667%;
 }
-.w-2\/4 {
-  width: 50%;
+.w-28 {
+  width: 7rem;
 }
 .w-4\/12 {
   width: 33.333333%;
@@ -665,14 +680,17 @@ video {
 .w-6 {
   width: 1.5rem;
 }
-.w-64 {
-  width: 16rem;
-}
 .w-7\/12 {
   width: 58.333333%;
 }
+.w-72 {
+  width: 18rem;
+}
 .w-8\/12 {
   width: 66.666667%;
+}
+.w-\[414px\] {
+  width: 414px;
 }
 .w-fit-content {
   width: -moz-fit-content;
@@ -690,6 +708,9 @@ video {
 }
 .list-disc {
   list-style-type: disc;
+}
+.grid-cols-12 {
+  grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 .flex-col {
   flex-direction: column;
@@ -715,14 +736,14 @@ video {
 .gap-2 {
   gap: 0.5rem;
 }
-.gap-3 {
-  gap: 0.75rem;
-}
 .gap-4 {
   gap: 1rem;
 }
 .gap-5 {
   gap: 1.25rem;
+}
+.gap-6 {
+  gap: 1.5rem;
 }
 .overflow-hidden {
   overflow: hidden;
@@ -730,17 +751,36 @@ video {
 .overflow-x-auto {
   overflow-x: auto;
 }
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
 .rounded {
   border-radius: 0.25rem;
 }
 .rounded-2xl {
   border-radius: 1rem;
 }
+.rounded-3xl {
+  border-radius: 1.5rem;
+}
+.rounded-\[80px\] {
+  border-radius: 80px;
+}
 .rounded-lg {
   border-radius: 0.5rem;
 }
 .rounded-xl {
   border-radius: 0.75rem;
+}
+.border {
+  border-width: 1px;
+}
+.border-b {
+  border-bottom-width: 1px;
+}
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 .bg-gray-100 {
   --tw-bg-opacity: 1;
@@ -749,6 +789,10 @@ video {
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(235 235 235 / var(--tw-bg-opacity));
+}
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 238 238 / var(--tw-bg-opacity));
 }
 .bg-gray-50 {
   --tw-bg-opacity: 1;
@@ -778,10 +822,6 @@ video {
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-}
-.px-20 {
-  padding-left: 5rem;
-  padding-right: 5rem;
 }
 .px-28 {
   padding-left: 7rem;
@@ -815,14 +855,17 @@ video {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
+.pb-8 {
+  padding-bottom: 2rem;
+}
 .pl-3 {
   padding-left: 0.75rem;
 }
 .pr-4 {
   padding-right: 1rem;
-}
-.pb-5 {
-  padding-bottom: 1.25rem;
 }
 .pt-10 {
   padding-top: 2.5rem;
@@ -830,33 +873,29 @@ video {
 .text-center {
   text-align: center;
 }
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
+.font-gilroy {
+  font-family: Gilroy, sans-serif;
 }
 .text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+  font-size: 44px;
+  line-height: 52px;
 }
 .text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+  font-size: 48px;
+  line-height: 50px;
 }
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
+.text-base {
+  font-size: 14px;
 }
 .text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+  font-size: 20px;
 }
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
 .text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+  font-size: 24px;
 }
 .text-xs {
   font-size: 10px;
@@ -880,7 +919,7 @@ video {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
-.text-gray-300 {
+.text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(102 102 102 / var(--tw-text-opacity));
 }
@@ -896,12 +935,23 @@ video {
   --tw-text-opacity: 1;
   color: rgb(65 239 210 / var(--tw-text-opacity));
 }
+.text-secondary {
+  --tw-text-opacity: 1;
+  color: rgb(125 74 206 / var(--tw-text-opacity));
+}
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .underline {
   text-decoration-line: underline;
+}
+.invert {
+  --tw-invert: invert(100%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
@@ -923,11 +973,54 @@ video {
 .duration-300 {
   transition-duration: 300ms;
 }
+.duration-500 {
+  transition-duration: 500ms;
+}
 
 /* TODO: Download font family Gilroy */
 
-.meta-trader-vector{
-    /* transform: rotate(-10.5deg); */
+.meta-trader-content, .meta-trader-image {
+    position: absolute;
+    opacity: 0;
+    animation-duration: 0.5s;
+    animation-fill-mode: both;
+    z-index: 1;
+    top: 0;
+    left: 0;
+}
+
+.meta-trader-content.active, .meta-trader-image.active {
+    animation-name: fadeInMoveRight;
+    z-index: 2;
+}
+
+.meta-trader-content.inactive, .meta-trader-image.inactive {
+    animation-name: fadeOutMoveRight;
+    z-index: 1;
+}
+
+@keyframes fadeInMoveRight {
+    0% {
+        opacity: 0;
+        transform: translateX(-100%);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes fadeOutMoveRight {
+    0% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+
+    100% {
+        opacity: 0;
+        transform: translateX(100%);
+    }
 }
 
 .hover\:bg-gray-100:hover {
@@ -1069,13 +1162,5 @@ video {
 
   .md\:hover\:bg-transparent:hover {
     background-color: transparent;
-  }
-}
-
-@media (min-width: 1280px) {
-
-  .xl\:px-20 {
-    padding-left: 5rem;
-    padding-right: 5rem;
   }
 }
