--- a/public/css/app.css
+++ b/public/css/app.css
@@ -495,8 +495,8 @@ video {
 
   .container {
     max-width: 1024px;
-    padding-right: 4rem;
-    padding-left: 4rem;
+    padding-right: 2rem;
+    padding-left: 2rem;
   }
 }
 @media (min-width: 1280px) {
@@ -538,8 +538,8 @@ video {
 .-bottom-4 {
   bottom: -1rem;
 }
-.-bottom-\[537px\] {
-  bottom: -537px;
+.-bottom-\[795px\] {
+  bottom: -795px;
 }
 .-right-\[211px\] {
   right: -211px;
@@ -562,24 +562,34 @@ video {
 .z-20 {
   z-index: 20;
 }
-.col-span-2 {
-  grid-column: span 2 / span 2;
+.order-1 {
+  order: 1;
 }
-.col-span-5 {
-  grid-column: span 5 / span 5;
+.order-2 {
+  order: 2;
+}
+.col-span-1 {
+  grid-column: span 1 / span 1;
+}
+.col-span-12 {
+  grid-column: span 12 / span 12;
 }
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
 }
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
 .mb-10 {
   margin-bottom: 2.5rem;
 }
+.mb-12 {
+  margin-bottom: 3rem;
+}
 .mb-3 {
   margin-bottom: 0.75rem;
-}
-.mb-4 {
-  margin-bottom: 1rem;
 }
 .mb-6 {
   margin-bottom: 1.5rem;
@@ -599,14 +609,23 @@ video {
 .mr-3 {
   margin-right: 0.75rem;
 }
+.mt-10 {
+  margin-top: 2.5rem;
+}
+.mt-14 {
+  margin-top: 3.5rem;
+}
 .mt-20 {
   margin-top: 5rem;
 }
-.mt-24 {
-  margin-top: 6rem;
-}
 .mt-4 {
   margin-top: 1rem;
+}
+.mt-6 {
+  margin-top: 1.5rem;
+}
+.mt-8 {
+  margin-top: 2rem;
 }
 .block {
   display: block;
@@ -635,20 +654,15 @@ video {
 .h-8 {
   height: 2rem;
 }
-.h-\[414px\] {
-  height: 414px;
+.h-\[314px\] {
+  height: 314px;
 }
-.h-\[424px\] {
-  height: 424px;
+.h-\[94vh\] {
+  height: 94vh;
 }
-.h-\[80vh\] {
-  height: 80vh;
-}
-.h-\[820px\] {
-  height: 820px;
-}
-.h-\[834px\] {
-  height: 834px;
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
 }
 .h-full {
   height: 100%;
@@ -656,41 +670,33 @@ video {
 .h-screen {
   height: 100vh;
 }
+.min-h-\[350px\] {
+  min-height: 350px;
+}
 .w-1\/2 {
   width: 50%;
 }
-.w-2\/12 {
-  width: 16.666667%;
-}
-.w-28 {
-  width: 7rem;
-}
-.w-4\/12 {
-  width: 33.333333%;
+.w-10\/12 {
+  width: 83.333333%;
 }
 .w-5 {
   width: 1.25rem;
 }
-.w-5\/12 {
-  width: 41.666667%;
-}
-.w-52 {
-  width: 13rem;
-}
 .w-6 {
   width: 1.5rem;
 }
-.w-7\/12 {
-  width: 58.333333%;
+.w-60 {
+  width: 15rem;
 }
-.w-72 {
-  width: 18rem;
+.w-\[300px\] {
+  width: 300px;
 }
-.w-8\/12 {
-  width: 66.666667%;
+.w-\[314px\] {
+  width: 314px;
 }
-.w-\[414px\] {
-  width: 414px;
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
 }
 .w-fit-content {
   width: -moz-fit-content;
@@ -712,11 +718,17 @@ video {
 .grid-cols-12 {
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
 .flex-col {
   flex-direction: column;
 }
 .flex-wrap {
   flex-wrap: wrap;
+}
+.items-start {
+  align-items: flex-start;
 }
 .items-center {
   align-items: center;
@@ -742,8 +754,8 @@ video {
 .gap-5 {
   gap: 1.25rem;
 }
-.gap-6 {
-  gap: 1.5rem;
+.gap-y-8 {
+  row-gap: 2rem;
 }
 .overflow-hidden {
   overflow: hidden;
@@ -794,10 +806,6 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(238 238 238 / var(--tw-bg-opacity));
 }
-.bg-gray-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}
 .bg-primary {
   --tw-bg-opacity: 1;
   background-color: rgb(65 239 210 / var(--tw-bg-opacity));
@@ -816,24 +824,17 @@ video {
 .p-2 {
   padding: 0.5rem;
 }
-.p-4 {
-  padding: 1rem;
-}
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
-}
-.px-28 {
-  padding-left: 7rem;
-  padding-right: 7rem;
 }
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
 }
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
 }
 .py-1 {
   padding-top: 0.25rem;
@@ -843,17 +844,24 @@ video {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 .py-5 {
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
 }
-.py-8 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.pb-24 {
+  padding-bottom: 6rem;
 }
 .pb-5 {
   padding-bottom: 1.25rem;
@@ -873,22 +881,23 @@ video {
 .text-center {
   text-align: center;
 }
+.text-right {
+  text-align: right;
+}
 .font-gilroy {
   font-family: Gilroy, sans-serif;
 }
-.text-3xl {
-  font-size: 44px;
-  line-height: 52px;
-}
-.text-4xl {
-  font-size: 48px;
-  line-height: 50px;
+.text-2xl {
+  font-size: 32px;
 }
 .text-base {
-  font-size: 14px;
+  font-size: 16px;
 }
 .text-lg {
   font-size: 20px;
+}
+.text-md {
+  font-size: 14px;
 }
 .text-sm {
   font-size: 0.875rem;
@@ -899,9 +908,6 @@ video {
 }
 .text-xs {
   font-size: 10px;
-}
-.font-bold {
-  font-weight: 700;
 }
 .font-medium {
   font-weight: 500;
@@ -914,6 +920,12 @@ video {
 }
 .uppercase {
   text-transform: uppercase;
+}
+.capitalize {
+  text-transform: capitalize;
+}
+.leading-10 {
+  line-height: 2.5rem;
 }
 .text-black {
   --tw-text-opacity: 1;
@@ -942,9 +954,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.underline {
-  text-decoration-line: underline;
 }
 .invert {
   --tw-invert: invert(100%);
@@ -977,9 +986,8 @@ video {
   transition-duration: 500ms;
 }
 
-/* TODO: Download font family Gilroy */
-
-.meta-trader-content, .meta-trader-image {
+.meta-trader-content,
+.meta-trader-image {
     position: absolute;
     opacity: 0;
     animation-duration: 0.5s;
@@ -989,12 +997,14 @@ video {
     left: 0;
 }
 
-.meta-trader-content.active, .meta-trader-image.active {
+.meta-trader-content.active,
+.meta-trader-image.active {
     animation-name: fadeInMoveRight;
     z-index: 2;
 }
 
-.meta-trader-content.inactive, .meta-trader-image.inactive {
+.meta-trader-content.inactive,
+.meta-trader-image.inactive {
     animation-name: fadeOutMoveRight;
     z-index: 1;
 }
@@ -1073,94 +1083,393 @@ video {
   --tw-ring-color: rgb(65 239 210 / var(--tw-ring-opacity));
 }
 
+@media (min-width: 640px) {
+
+  .sm\:w-7\/12 {
+    width: 58.333333%;
+  }
+
+  .sm\:flex-nowrap {
+    flex-wrap: nowrap;
+  }
+
+  .sm\:justify-start {
+    justify-content: flex-start;
+  }
+}
+
 @media (min-width: 768px) {
-
-  .md\:absolute {
-    position: absolute;
-  }
-
-  .md\:order-1 {
-    order: 1;
-  }
-
-  .md\:order-2 {
-    order: 2;
-  }
-
-  .md\:mr-0 {
-    margin-right: 0px;
-  }
-
-  .md\:mt-0 {
-    margin-top: 0px;
-  }
-
-  .md\:mt-6 {
-    margin-top: 1.5rem;
-  }
 
   .md\:block {
     display: block;
   }
 
-  .md\:flex {
-    display: flex;
+  .md\:h-\[414px\] {
+    height: 414px;
   }
 
-  .md\:hidden {
-    display: none;
+  .md\:w-28 {
+    width: 7rem;
   }
 
-  .md\:h-auto {
-    height: auto;
+  .md\:w-52 {
+    width: 13rem;
   }
 
-  .md\:w-44 {
-    width: 11rem;
+  .md\:w-72 {
+    width: 18rem;
+  }
+
+  .md\:w-\[400px\] {
+    width: 400px;
+  }
+
+  .md\:w-\[414px\] {
+    width: 414px;
   }
 
   .md\:w-auto {
     width: auto;
   }
 
-  .md\:flex-row {
+  .md\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:text-3xl {
+    font-size: 44px;
+    line-height: 52px;
+  }
+
+  .md\:text-4xl {
+    font-size: 48px;
+  }
+
+  .md\:text-lg {
+    font-size: 20px;
+  }
+
+  .md\:leading-50 {
+    line-height: 50px;
+  }
+}
+
+@media (min-width: 1024px) {
+
+  .lg\:absolute {
+    position: absolute;
+  }
+
+  .lg\:-bottom-\[550px\] {
+    bottom: -550px;
+  }
+
+  .lg\:order-1 {
+    order: 1;
+  }
+
+  .lg\:order-2 {
+    order: 2;
+  }
+
+  .lg\:mb-0 {
+    margin-bottom: 0px;
+  }
+
+  .lg\:mb-4 {
+    margin-bottom: 1rem;
+  }
+
+  .lg\:mb-6 {
+    margin-bottom: 1.5rem;
+  }
+
+  .lg\:mb-8 {
+    margin-bottom: 2rem;
+  }
+
+  .lg\:mt-0 {
+    margin-top: 0px;
+  }
+
+  .lg\:mt-5 {
+    margin-top: 1.25rem;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:hidden {
+    display: none;
+  }
+
+  .lg\:h-3\/4 {
+    height: 75%;
+  }
+
+  .lg\:h-6 {
+    height: 1.5rem;
+  }
+
+  .lg\:h-\[424px\] {
+    height: 424px;
+  }
+
+  .lg\:h-\[820px\] {
+    height: 820px;
+  }
+
+  .lg\:h-\[834px\] {
+    height: 834px;
+  }
+
+  .lg\:h-auto {
+    height: auto;
+  }
+
+  .lg\:h-full {
+    height: 100%;
+  }
+
+  .lg\:w-1\/2 {
+    width: 50%;
+  }
+
+  .lg\:w-2\/12 {
+    width: 16.666667%;
+  }
+
+  .lg\:w-3\/4 {
+    width: 75%;
+  }
+
+  .lg\:w-4\/12 {
+    width: 33.333333%;
+  }
+
+  .lg\:w-44 {
+    width: 11rem;
+  }
+
+  .lg\:w-5\/12 {
+    width: 41.666667%;
+  }
+
+  .lg\:w-7\/12 {
+    width: 58.333333%;
+  }
+
+  .lg\:w-8\/12 {
+    width: 66.666667%;
+  }
+
+  .lg\:w-auto {
+    width: auto;
+  }
+
+  .lg\:grid-cols-5 {
+    grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+
+  .lg\:flex-row {
     flex-direction: row;
   }
 
-  .md\:space-x-8 > :not([hidden]) ~ :not([hidden]) {
+  .lg\:items-center {
+    align-items: center;
+  }
+
+  .lg\:justify-end {
+    justify-content: flex-end;
+  }
+
+  .lg\:gap-2 {
+    gap: 0.5rem;
+  }
+
+  .lg\:gap-4 {
+    gap: 1rem;
+  }
+
+  .lg\:gap-y-0 {
+    row-gap: 0px;
+  }
+
+  .lg\:space-x-8 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
     margin-right: calc(2rem * var(--tw-space-x-reverse));
     margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .md\:overflow-x-hidden {
+  .lg\:overflow-x-hidden {
     overflow-x: hidden;
   }
 
-  .md\:overflow-y-hidden {
+  .lg\:overflow-y-hidden {
     overflow-y: hidden;
   }
 
-  .md\:bg-white {
+  .lg\:border-0 {
+    border-width: 0px;
+  }
+
+  .lg\:bg-white {
     --tw-bg-opacity: 1;
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   }
 
-  .md\:p-0 {
+  .lg\:p-0 {
     padding: 0px;
   }
 
-  .md\:opacity-0 {
+  .lg\:p-4 {
+    padding: 1rem;
+  }
+
+  .lg\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .lg\:py-0 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+  }
+
+  .lg\:py-8 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
+  .lg\:text-3xl {
+    font-size: 44px;
+    line-height: 52px;
+  }
+
+  .lg\:text-lg {
+    font-size: 20px;
+  }
+
+  .lg\:text-white {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+
+  .lg\:opacity-0 {
     opacity: 0;
   }
 
-  .md\:shadow {
+  .lg\:shadow {
     --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
     --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 
-  .md\:hover\:bg-transparent:hover {
+  .lg\:hover\:bg-transparent:hover {
+    background-color: transparent;
+  }
+}
+
+@media (min-width: 1280px) {
+
+  .xl\:-bottom-\[537px\] {
+    bottom: -537px;
+  }
+
+  .xl\:order-1 {
+    order: 1;
+  }
+
+  .xl\:order-2 {
+    order: 2;
+  }
+
+  .xl\:col-span-2 {
+    grid-column: span 2 / span 2;
+  }
+
+  .xl\:col-span-5 {
+    grid-column: span 5 / span 5;
+  }
+
+  .xl\:my-0 {
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
+
+  .xl\:mr-0 {
+    margin-right: 0px;
+  }
+
+  .xl\:mt-24 {
+    margin-top: 6rem;
+  }
+
+  .xl\:h-8 {
+    height: 2rem;
+  }
+
+  .xl\:h-\[820px\] {
+    height: 820px;
+  }
+
+  .xl\:h-full {
+    height: 100%;
+  }
+
+  .xl\:min-h-fit {
+    min-height: -moz-fit-content;
+    min-height: fit-content;
+  }
+
+  .xl\:w-5\/12 {
+    width: 41.666667%;
+  }
+
+  .xl\:w-8\/12 {
+    width: 66.666667%;
+  }
+
+  .xl\:w-auto {
+    width: auto;
+  }
+
+  .xl\:flex-col {
+    flex-direction: column;
+  }
+
+  .xl\:gap-10 {
+    gap: 2.5rem;
+  }
+
+  .xl\:gap-5 {
+    gap: 1.25rem;
+  }
+
+  .xl\:gap-6 {
+    gap: 1.5rem;
+  }
+
+  .xl\:p-0 {
+    padding: 0px;
+  }
+
+  .xl\:px-28 {
+    padding-left: 7rem;
+    padding-right: 7rem;
+  }
+
+  .xl\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .xl\:hover\:bg-transparent:hover {
     background-color: transparent;
   }
 }
