--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,9 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-/* TODO: Download font family Gilroy */
-
-.meta-trader-content, .meta-trader-image {
+.meta-trader-content,
+.meta-trader-image {
     position: absolute;
     opacity: 0;
     animation-duration: 0.5s;
@@ -14,12 +13,14 @@
     left: 0;
 }
 
-.meta-trader-content.active, .meta-trader-image.active {
+.meta-trader-content.active,
+.meta-trader-image.active {
     animation-name: fadeInMoveRight;
     z-index: 2;
 }
 
-.meta-trader-content.inactive, .meta-trader-image.inactive {
+.meta-trader-content.inactive,
+.meta-trader-image.inactive {
     animation-name: fadeOutMoveRight;
     z-index: 1;
 }
